fix image overflow

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -22,7 +22,7 @@ body {
 }
 div {
   box-sizing: border-box;
-  width: 100%;
+  // width: 100%;
   max-width: 100%;
 }
 
